--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -13,3 +13,11 @@ python:
       
 sphinx:
   configuration: docs/source/conf.py
+
+
+sphinx:
+  fail_on_warning: true
+
+formats:
+  - pdf
+  - epub
