--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -13,5 +13,5 @@ dependencies:
   - cookiecutter
   - gitpython
   - pip
-  - sphinx=7.1.2
-  - sphinx-rtd-theme=1.3.0rc1
+  - sphinx
+  - sphinx-rtd-theme
