--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -4,6 +4,9 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "mambaforge-22.9"
+  jobs:
+    pre_build:
+      - sphinx-apidoc -o docs/source/ plasmetheus.py
 
 
       
